--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^26.1.0",
@@ -44,7 +46,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "REACT_APP_API_URL=http://localhost:7001/api REACT_APP_FRONTEND_URL=http://localhost:3000 REACT_APP_WEBSITE_NAME=TestApp jest --config jest.config.js",
+    "test": "cross-env NODE_ENV=test dotenv -e .env.test -- jest --config jest.config.js",
     "lint:css": "stylelint '**/*.css' --fix"
   },
   "eslintConfig": {
