--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -86,7 +86,7 @@ jobs:
             REACT_APP_API_URL=${{ env.REACT_APP_API_URL }}
             REACT_APP_FRONTEND_URL=${{ env.REACT_APP_FRONTEND_URL }}
             REACT_APP_ENV=${{ env.REACT_APP_ENV }}
-            REACT_APP_WEBSITE_NAME=${{ env.REACT_APP_WEBSITE_NAME }}
+            REACT_APP_WEBSITE_NAME=${{ vars.REACT_APP_WEBSITE_NAME }}
             # Options techniques
             REACT_APP_ENABLE_DEBUG=false
             REACT_APP_MAINTENANCE_MODE=false
