--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^26.1.0",
-    "prettier": "^3.4.1",
-    "stylelint": "^16.10.0",
+    "prettier": "^3.5.3",
+    "stylelint": "^16.19.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "ts-jest": "^28.0.8",
@@ -48,7 +48,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "cross-env NODE_ENV=test dotenv -e .env.test -- jest --config jest.config.js",
-    "lint:css": "stylelint '**/*.css' --fix"
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
